@@ -37,7 +37,11 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 Aug 28, 2014: Various bug fixes.  This includes corner cases in FT_CAS,
               the instrumentor, and the shadow state representation of 
-              arrays (most notably in large, long-running programs.)
+              arrays (most notably in long-running programs with large
+     		  heap sizes).
+              
+              Arrays are now tracked in fine-grained mode by default
+              (rather than being untracked by default).
               
               Performance: RoadRunner's shadow state could pin 
               down objects that otherwise could be collected.  All Shadow
@@ -49,7 +53,7 @@ Aug 28, 2014: Various bug fixes.  This includes corner cases in FT_CAS,
 		      future.
 		      
   	          Tools can now have more specialized fast path methods for
-	          array and field accesses.  See Tool.java
+	          array and field accesses.  See Tool.java.
 
 July 8, 2014: Various small changes and bug fixes in instrumentation.
               New CAS-based updaters.
